--- a/Exercicios/Site/estilo/style.css
+++ b/Exercicios/Site/estilo/style.css
@@ -155,6 +155,8 @@ header > p {
 
     padding-right: 10px;
 
+    padding-bottom:80px;
+
     margin: auto;
 
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315);
