--- a/desafios/estilo/style.css
+++ b/desafios/estilo/style.css
@@ -1,8 +1,18 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Cookie&family=Roboto&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 
+:root {
+
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Roboto', sans-serif;;
+    --font3: 'Sriracha', cursive;
+
+}
 * {
-
+    
     margin:  0px;
     padding: 0px;
 
@@ -12,6 +22,7 @@ html, body {
 
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font1);
     
 }
 
@@ -26,6 +37,8 @@ header > h1 {
 
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 4em;
 }
 
 header > p {
@@ -33,8 +46,13 @@ header > p {
     padding-bottom: 50px;
 }
 
+header a:hover {
+
+    color:white;
+}
+
 a {
-    color: white;
+    color: rgb(255, 0, 0);
     text-decoration: none;
     font-weight: bolder;
 
@@ -50,6 +68,7 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
 }
 
 
@@ -80,4 +99,9 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
+}
+
+footer a:hover {
+
+    color: white;
 }
