--- a/desafios/estilo/style.css
+++ b/desafios/estilo/style.css
@@ -51,7 +51,7 @@ header > h1 {
 
     font-family: var(--font2);
 
-    font-size: 4em;
+    font-size: 10vw;
 }
 
 header > p {
@@ -89,6 +89,9 @@ section {
     padding-left: 30px;
 
     font-family: var(--font3);
+
+    font-size: 2vw;
+
 }
 
 
@@ -109,7 +112,9 @@ section.imagem {
 
 section.imagem > p {
 
-    width: 400px;
+    display: inline-block;
+
+    padding: 10px;
     
     background-color: rgb(0, 0, 0, 0.253);
     
