--- a/desafios/estilo/style.css
+++ b/desafios/estilo/style.css
@@ -94,19 +94,9 @@ section {
 
 }
 
-
-section.normal {
-
-    background-color: white;
-
-    color: black;
-}
-
-section.imagem {
-
-    background-color: rgb(125, 131, 131);
-
-    color: rgb(255, 255, 255);
+section.normal > p{
+ 
+    line-height: 2em;
 
 }
 
@@ -116,10 +106,52 @@ section.imagem > p {
 
     padding: 10px;
     
-    background-color: rgb(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.650);
+
+    text-shadow: 1px 1px 0px black;
+
+    border-radius: 10px;
+    
+}
+
+
+section.normal {
+
+    background-color: white;
+
+    color: black;
+}
+
+
+
+section.imagem {
+
+    background-color: rgb(125, 131, 131);
+
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+
+    background-size: cover;
+
+    background-attachment: fixed;
+
+    color: rgb(255, 255, 255);
+
+}
+
+section#img01 {
+
+    background-image: url('../imagens/fundo-madeira.jpg');
+   
+    
+}
+
+section#img02 {
+
+    background-image: url('../imagens/Sobrenós.jpg');
     
     
 }
+
 
 footer {
 
